🐛 FIX: Remove horizontal scrolling

--- a/src/scss/blocks/_planet-main.scss
+++ b/src/scss/blocks/_planet-main.scss
@@ -3,6 +3,7 @@
 .planet {
   display: grid;
   grid-template-rows: auto 1fr auto auto;
+  grid-template-columns: 100%;
   gap: 2rem 3rem;
   height: 100%;
 
